# houdini-pathmanager

./: CONTRIBUTING.md  PaneTabTypeMenu.xml  README.md  pathmanager.json  pyproject.toml  requirements.txt
.github/: create_images.py
.github/workflows/: release.yml
pathmanager/: browser.py  hou_qt_parameters.py  install.py  manager.py  menu.py  meta.py  node_type.py  parameters.py  qt_parameters.py  radio_tab.py  schema.py  search.py  thread.py  tree.py  ui.py  utils.py
pathmanager/core/: __init__.py  base.py  schema.py
pathmanager/hosts/: base.py  houdini.py
pathmanager/houdini/: __init__.py  host.py  ui.py  widgets.py
pathmanager/plugins/: base.py  cp.py  find.py  manager.py  mv.py  relative.py  replace.py  set_directory.py  version.py
pathmanager/ui/: __init__.py  manager.py  parameters.py  tree.py
pathmanager/widgets/: __init__.py  browser.py  dialog.py  filter.py  menu.py  messagebox.py  tree.py
python_panels/: pathmanager.pypanel
src/pathmanager/: schema.py  storage.py
src/pathmanager/houdini/: widgets.py
src/pathmanager/plugins/: __init__.py  manager.py  version.py
src/pathmanager/ui/: log.py  manager.py  panels.py  repo.py
src/pathmanager/widgets/: tree.py
src/python_panels/: pathmanager.pypanel
tests/: __init__.py  browser.py  files.py  host.py  test.py  ui.py
tests/houdini/: __init__.py  host.py
