[project]
name = "qt-themes"
version = "0.4.0"
description = "A collection of themes for Qt applications in Python."
authors = [
    {name = "Beat Reichenbach"}
]
dependencies = [
    "qtpy>=2.4,<3",
    "qt-parameters>=1.2,<2",
    "qt-material-icons>=0.4,<1",
]
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "PySide6",
    "types-houdini"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pathmanager"]

[tool.black]
skip-string-normalization = true
